# exa-data-eng-assessment

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
documentation/: RESEARCH.md
src/: config.py  database.py  extractors.py  main.py  models.py
src/extractors/: patient.py
src/models/: patient.py
tests/: conftest.py  test_extractors.py  test_integration.py  test_main.py  test_patients_extraction.py
